<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="6dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/judul_film" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Produser"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Pemeran1"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Pemeran2"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Pemeran3"/>


            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tahun" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/genre" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/petikdua" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/petikdua" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/petikdua" />

            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/petikdua" />
            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/petikdua" />
            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/petikdua" />
            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/petikdua" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFilm"
                android:textStyle="bold"
                android:text=""
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/produser"
                android:textStyle="bold"
                android:text=""
                android:layout_marginTop="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pemeranUtm1"
                android:textStyle="bold"
                android:text=""
                android:layout_marginTop="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pemeranUtm2"
                android:textStyle="bold"
                android:text=""
                android:layout_marginTop="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pemeranUtm3"
                android:textStyle="bold"
                android:text=""
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvtahun"
                android:textStyle="bold"
                android:text=""
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvGenre"
                android:text=""
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:layout_marginStart="8dp"
        android:gravity="center">
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/edit"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>